fixed a massive headache with urls, need to look at why horizontal scroll doesnt work properly

--- a/CSS/NightTheme.css
+++ b/CSS/NightTheme.css
@@ -414,6 +414,7 @@ select.nice{
 	-webkit-appearance: none;
 	-webkit-box-shadow: 1px 1px 1px #fff;
 	-webkit-border-radius: 0.5em;
+	width: 3.8em;
 }
 textarea.TagEnter{
 	padding:3px;
@@ -424,4 +425,8 @@ input.TagCheck{
 	background-color: #8B87A9;
 	font-size: 11px;
 	font-family: "Lucida Grande", "Lucida Sans Unicode", Verdana, Arial, Helvetica, sans-serif;	
+}
+/* Making the drop down for tags not extend to the longest element*/
+#taglist{
+	width:10px;
 }
